--- a/arch/arm64/boot/dts/freescale/fsl-s32g398a.dtsi
+++ b/arch/arm64/boot/dts/freescale/fsl-s32g398a.dtsi
@@ -1,6 +1,6 @@
 // SPDX-License-Identifier: GPL-2.0
 /*
- * Copyright 2021 NXP
+ * Copyright 2021-2022 NXP
  *
  * This program is free software; you can redistribute it and/or modify
  * it under the terms of the GNU General Public License as published by
@@ -124,32 +124,28 @@
 		device_type = "cpu";
 		compatible = "arm,cortex-a53";
 		reg = <0x0 0x2>;
-		enable-method = "spin-table";
-		cpu-release-addr = <0x0 0x00>;
+		enable-method = "psci";
 		next-level-cache = <&cluster0_l2_cache>;
 	};
 	cpu5: cpu@3 {
 		device_type = "cpu";
 		compatible = "arm,cortex-a53";
 		reg = <0x0 0x3>;
-		enable-method = "spin-table";
-		cpu-release-addr = <0x0 0x00>;
+		enable-method = "psci";
 		next-level-cache = <&cluster0_l2_cache>;
 	};
 	cpu6: cpu@102 {
 		device_type = "cpu";
 		compatible = "arm,cortex-a53";
 		reg = <0x0 0x102>;
-		enable-method = "spin-table";
-		cpu-release-addr = <0x0 0x00>;
+		enable-method = "psci";
 		next-level-cache = <&cluster1_l2_cache>;
 	};
 	cpu7: cpu@103 {
 		device_type = "cpu";
 		compatible = "arm,cortex-a53";
 		reg = <0x0 0x103>;
-		enable-method = "spin-table";
-		cpu-release-addr = <0x0 0x00>;
+		enable-method = "psci";
 		next-level-cache = <&cluster1_l2_cache>;
 	};
 };
